<resources>
    <string name="app_name">Parking System</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_current_vehicle">Change current vehicle</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="payments">Payments</string>
    <string name="no_vehicles_configured_yet">No vehicles configured yet</string>
    <string name="please_add_a_vehicle_in_order_to_use_the_app">Please add a vehicle in order to use the app.</string>
    <string name="title_activity_maps">Map</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="payment_parking_details">Payment Parking Details</string>
    <string name="parque_7">Parque 7</string>
    <string name="todo">TODO</string>
    <string name="rua_falsa">Rua Falsa 123, Nossa Senhora Da Peneda</string>
    <string name="textview">TextView</string>
    <string name="vehicle">Vehicle:</string>
    <string name="price_to_pay">Price to pay:</string>
    <string name="time_elapsed">Time elapsed:</string>
    <string name="entrance_date">Entrance date:</string>
    <string name="entrance_time">Entrance time:</string>
    <string name="returnB">Return</string>
    <string name="help">help</string>
    <string name="lang">lang</string>
    <string name="notifications">notifications</string>
    <string name="logout">logout</string>
    <string name="language">Language</string>
    <string name="notificationsT">Notifications</string>
    <string name="helpT">Help</string>
    <string name="log_out">Log out</string>
    <string name="wallet">Wallet</string>
    <string name="vehiclesB">Vehicles</string>
    <string name="vehiclesH">Vehicles</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="back">Back</string>
    <string name="quickEasy">It’s quick and easy</string>
    <string name="personalInfo">Personal info</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="carInfo">Car info</string>
    <string name="modelo">Model</string>
    <string name="carPlate">Car plate</string>
    <string name="name">Name</string>
    <string name="quick_operations">Quick operations</string>
    <string name="home">Home</string>
    <string name="qrCode" translatable="false">QR Code</string>
    <string name="choose_location">Choose Location…</string>
    <string name="search">Search</string>
    <string name="nome">NAME</string>
    <string name="morada">ADDRESS</string>
    <string name="reservar">Reserve</string>
    <string name="rota">Route</string>
    <string name="history">History</string>
    <string name="current_location">Current Location</string>
    <string name="parking">Parking</string>
    <string name="parking_on_going">On Going Parking</string>
    <string name="park_time" translatable="false">%1$s : %2$s</string>
    <string name="park_detail_error">There was an error fetching the park data</string>
    <string name="profile">Profile</string>
    <string name="indique_o_tempo_pretendido">Set the desired time slot</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="submit">Submit</string>
    <string name="futureReservations">Schedule reservations</string>
    <string name="naoExisteReservas">There is no Schedule reservations</string>
    <string name="addpayment">Add Payment</string>
    <string name="add_wallet">Please Insert Card Number</string>
    <string name="Insert">Create</string>
    <string name="matriculaInserida">Registration entered</string>
    <string name="button">Button</string>
    <string name="insiraDia">Input day and time of the reservation</string>
    <string name="tempoReserva">Input how many time in minutes you want to reserve</string>
    <string name="aa">Entry:</string>
    <string name="bb">Out:</string>
</resources>