<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/proxima_nova_font"
        android:textSize="35sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/loginTV"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/proxima_nova_font"
            android:text="@string/email"
            android:textSize="19sp">

        </TextView>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/proxima_nova_font"
            android:text="@string/password"
            android:textSize="19sp">

        </TextView>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:backgroundTint="@color/base"
            android:onClick="onClickLogin" />

    </LinearLayout>



</RelativeLayout>