<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".fragment.Profile">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic__564535_customer_user_userphoto_account_person_icon" />

            <TextView
                android:id="@+id/nomeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="#5D3EA8"
                android:fontFamily="@font/proxima_nova_font"
                android:text="@string/textview"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/proxima_nova_font"
                android:text="@string/textview" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/cardView"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonReservas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/proxima_nova_font"
            android:drawableLeft="@drawable/ic_baseline_local_parking_24"
            android:text="@string/futureReservations"/>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/proxima_nova_font"
            android:drawableLeft="@drawable/ic__52426_history_icon"
            android:text="@string/history"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_font"
            android:layout_marginTop="3dp"
            android:drawableLeft="@drawable/ic__72588_credit_card_icon"
            android:text="@string/wallet"/>



        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:fontFamily="@font/proxima_nova_font"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableLeft="@drawable/ic__295533_toys_kids_children_car_transportation_icon"
            android:text="@string/vehiclesB"/>



        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/purple_500"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/proxima_nova_font"
            android:drawableLeft="@drawable/ic_log_out_outline"
            android:drawableTint="@color/purple_500"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"/>
    </LinearLayout>

</RelativeLayout>