<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReserveFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backImageViewWallet"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back"
            android:onClick="goBack"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Visa"
                android:textColor="@color/base"
                android:textSize="40sp"
                />


            <EditText
                android:id="@+id/textCard"
                android:hint="@string/add_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:fontFamily="@font/proxima_nova_font"
                android:calendarViewShown="false"
                android:layout_marginBottom="20dp"/>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Insert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/base"
                    android:onClick="addMatricula"
                    android:text="@string/Insert" />


            </LinearLayout>

        </LinearLayout>








    </LinearLayout>


</FrameLayout>